# fractal-drawing

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
drawning/: draw_2d.py
fractaldrawing/: __init__.py
l_system/: system_2d.py  system_base.py
rule_selector/: evolution.py
rule_templates/: classic_templates.json  fill_template.py  generic_templates.json  templates.json
utils/: fractal_logging.py  fractal_regex.py  lambda_parser.py  lsystem_loader.py  rule_agent.py  tokenizer.py
